@@ -382,7 +382,7 @@ name|fs
 init|=
 name|FileSystem
 operator|.
-name|newInstance
+name|get
 argument_list|(
 name|lockPath
 operator|.
@@ -602,7 +602,7 @@ name|fs
 init|=
 name|FileSystem
 operator|.
-name|newInstance
+name|get
 argument_list|(
 name|lockPath
 operator|.
@@ -692,7 +692,7 @@ name|fs
 init|=
 name|FileSystem
 operator|.
-name|newInstance
+name|get
 argument_list|(
 name|lockPath
 operator|.
