@@ -407,6 +407,15 @@ operator|+
 literal|"nameNodeNameDir"
 argument_list|)
 expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+literal|"fs.hdfs.impl.disable.cache"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 name|System
 operator|.
 name|setProperty
