@@ -1336,12 +1336,21 @@ operator|new
 name|Configuration
 argument_list|()
 decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+literal|"fs.hdfs.impl.disable.cache"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 name|FileSystem
 name|fs
 init|=
 name|FileSystem
 operator|.
-name|newInstance
+name|get
 argument_list|(
 operator|new
 name|URI
