@@ -604,17 +604,31 @@ argument_list|(
 name|hdfsUri
 argument_list|)
 decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+literal|"fs.hdfs.impl.disable.cache"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 name|fs
 operator|=
 name|FileSystem
 operator|.
-name|newInstance
+name|get
 argument_list|(
 name|uri
 argument_list|,
-operator|new
-name|Configuration
-argument_list|()
+name|conf
 argument_list|)
 expr_stmt|;
 block|}
